--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@shadcn/ui": "^0.0.4",
     "browserify-zlib": "^0.2.0",
     "daisyui": "^4.12.14",
+    "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
     "node-fetch": "^2.7.0",
     "react": "^18.3.1",
